--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <box>
-      <main></main>
-      <div class="overBanner"></div>
-      <div class="banner"></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"
+		/>
+	</head>
+	<body>
+		<box>
+			<main>
+				<div class="titleMain">
+					<h3>OHKEN</h3>
+					<p>The Best Studio</p>
+				</div>
+				<div class="extra">
+					<div>
+						<button><i class="fa-brands fa-google"></i></button>
+						<button><i class="fa-brands fa-facebook"></i></button>
+						<button><i class="fa-brands fa-github"></i></button>
+					</div>
+					<span>or</span>
+				</div>
+				<div class="inputField">
+					<input type="text" name="" id="" placeholder="Full name" />
+					<input type="text" name="" id="" placeholder="Email" />
+					<input type="password" placeholder="Password" />
+				</div>
+				<button class="continue">continue</button>
+				<p class="adviceLogin">Already have an account? <a>Log in</a></p>
+			</main>
+			<div class="overBanner">
+            <span>Register Page</span>
+            <h1>OHKEN</h1>
+            <span> © Daniel's Register-Pages 2024 - Todos os direitos reservados</span>
 
-   </box>
-   
-</body>
+         </div>
+			<div class="banner">
+            <img src="wallpapersden.com_ai-magical-sunset-orange-x-blue_1952x1120.jpg" alt="">
+         </div>
+		</box>
+      <div class="background"></div>
+	</body>
 </html>
