--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<box>
-			<main>
+			<form class="main">
 				<div class="titleMain">
 					<h3>OHKEN</h3>
 					<p>The Best Studio</p>
@@ -27,12 +27,12 @@
 				</div>
 				<div class="inputField">
 					<input type="text" name="" id="" placeholder="Full name" />
-					<input type="text" name="" id="" placeholder="Email" />
+					<input type="email" name="" id="" placeholder="Email" />
 					<input type="password" placeholder="Password" />
 				</div>
 				<button class="continue">continue</button>
 				<p class="adviceLogin">Already have an account? <a>Log in</a></p>
-			</main>
+			</form>
 			<div class="overBanner">
             <span>Register Page</span>
             <h1>OHKEN</h1>
